# geany-django

./: CMakeLists.txt  README.md  geany_django.c  geany_django.h  main.c
